@@ -1,3 +1,7 @@
+2012-05-12  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-sbcl.lisp (stream-force-output): Undo last few changes.
+
 2012-05-11  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-sbcl.lisp (stream-force-output): Use with-world-lock
